w24_celloader_check.log
    Checking bit_field v0.10.3
    Checking uguid v2.2.1
    Checking bitflags v2.11.1
    Checking cfg-if v1.0.4
    Checking log v0.4.29
    Checking ptr_meta v0.2.0
    Checking ucs2 v0.3.3
    Checking uefi-raw v0.8.0
    Checking uefi v0.32.0
    Checking celloader v0.1.0 (C:\Users\amdix\projects\celium\bootloader\celloader)
error[E0133]: call to unsafe function `__cpuid` is unsafe and requires unsafe block
  --> src\hardware.rs:49:17
   |
49 |     let leaf0 = __cpuid(0);
   |                 ^^^^^^^^^^ call to unsafe function
   |
   = note: consult the function's documentation for information on how to avoid undefined behavior

error[E0133]: call to unsafe function `__cpuid` is unsafe and requires unsafe block
  --> src\hardware.rs:50:17
   |
50 |     let leaf1 = __cpuid(1);
   |                 ^^^^^^^^^^ call to unsafe function
   |
   = note: consult the function's documentation for information on how to avoid undefined behavior

error[E0133]: call to unsafe function `__cpuid` is unsafe and requires unsafe block
  --> src\hardware.rs:51:17
   |
51 |     let ext1  = __cpuid(0x8000_0001);
   |                 ^^^^^^^^^^^^^^^^^^^^ call to unsafe function
   |
   = note: consult the function's documentation for information on how to avoid undefined behavior

For more information about this error, try `rustc --explain E0133`.
error: could not compile `celloader` (bin "celloader") due to 3 previous errors
